--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,17 @@
 {
 	"short_name": "rocketdev",
-	"name": "rocketdev",
+	"name": "La Rocket Dev Pokédex, outil web ultime pour tous les dresseurs Pokémon",
 	"description": "Le Pokédex de La Rocket Dev, outil idéal pour tout dresseur en formation ! Explorez, découvrez et apprenez tout sur vos Pokémon préférés, de Bulbizarre à Dracaufeu en passant par Pikachu !",
 	"icons": [
 		{
 			"src": "./IMG/Logo-Pokemon-128.png",
 			"type": "image/png",
 			"sizes": "128x128"
+		},
+		{
+			"src": "./IMG/Logo-Pokemon-192.png",
+			"type": "image/png",
+			"sizes": "512x512"
 		},
 		{
 			"src": "./IMG/Logo-Pokemon-512.png",
