--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"short_name": "rocketdev",
-	"name": "La Rocket Dev Pokédex, outil web ultime pour tous les dresseurs Pokémon",
+	"name": "Rocket Dev Pokédex",
 	"description": "Le Pokédex de La Rocket Dev, outil idéal pour tout dresseur en formation ! Explorez, découvrez et apprenez tout sur vos Pokémon préférés, de Bulbizarre à Dracaufeu en passant par Pikachu !",
 	"icons": [
 		{
