--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
 			"sizes": "512x512"
 		}
 	],
-	"start_url": "/",
+	"start_url": "./ECF_ROCKET",
 	"background_color": "#0d0a16",
 	"display": "standalone",
 	"scope": "/",
